--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,3 +135,28 @@
     @apply bg-background text-foreground;
   }
 }
+
+html, body {
+  min-height: 100%;
+  background-color: black;
+}
+
+
+@keyframes teamScroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-teamScroll {
+  display: flex;
+  white-space: nowrap;
+  animation: teamScroll 25s linear infinite;
+}
+
+html {
+  scroll-behavior: smooth;
+}
